Address @wsbrenk's code review comments.